corrected HRI link

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <a class="author-block"href="https://www.uc3m.es/systems-engineering-automation-department/home" target="_blank"><sup>🤖</sup>Universidad Carlos III de Madrid<br><sup>🚀</sup>Honda Research Institute EU</a>
+                    <a class="author-block"href="https://www.uc3m.es/systems-engineering-automation-department/home" target="_blank"><sup>🤖</sup>Universidad Carlos III de Madrid</a>
+					<br>
+					<a class="author-block"href="https://www.honda-ri.de/" target="_blank"><sup>🚀</sup>Honda Research Institute EU</a>
                   </div>
 
                   <div class="column has-text-centered">
